--- a/src/Taz-LeetCode.Tests/Taz-LeetCode.Tests.csproj
+++ b/src/Taz-LeetCode.Tests/Taz-LeetCode.Tests.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Taz-LeetCode.Problems\Taz-LeetCode.Problems.csproj" />
+  </ItemGroup>
+
 </Project>
